--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SDG7 Energy Portal</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles_kts.css" />
   </head>
   <body>
     <section>
