--- a/index.html
+++ b/index.html
@@ -4,97 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SDG7 Energy Portal</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/styles_kts.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-<style>
-      .question {
-  margin-bottom: 30px;
-}
 
-.question h3 {
-  margin-bottom: 10px;
-  color: #222;
-}
-
-.options {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.options label {
-  background: lightgreen;
-  border: 2px solid green;
-  border-radius: 8px;
-  padding: 12px 16px;
-  cursor: pointer;
-  transition: all 0.2s ease;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-size: 16px;
-}
-
-.options input[type="radio"] {
-  accent-color: green;
-  transform: scale(1.2);
-}
-
-.options input[type="radio"]:checked + span {
-  display:none;
-  font-weight: bold;
-}
-
-.options label:hover {
-  border-color: greenyellow;
-  background: #e6f2ff;
-}
-
-button {
-  background-color: green;
-  color: white;
-  padding: 12px 24px;
-  font-size: 16px;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-button:hover {
-  background-color: green;
-}
-
-#result {
-  font-weight: bold;
-  margin-top: 20px;
-  text-align: center;
-  font-size: 18px;
-  color: green;
-}
-
-.section-title h2 {
-  display: inline-block;
-  background-color: #f5f5f5;
-  padding: 0 1rem;
-  font-size: 2rem;
-  color: var(--secondary);
-}
-
-:root {
-  --primary: #fcc30b;
-  --secondary: #3f7e44;
-  --dark: #1a1a1a;
-  --light: #f8f9fa;
-  --accent: #26bde2;
-  --danger: #cf3338;
-  --success: #4caf50;
-  --warning: #ff9800;
-  --gray: #6c757d;
-}
-</style>
     <section>
         <div class="section-title"><h2>SDG 7: Affordable and Clean Energy Quiz</h2></div>
 
